# ai-expert-journey

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
docs/: 01_UV_MIGRATION_设计文档.md  CONTRIBUTING.md  ENV.md  README.md  RUNBOOK.md
docs/adr/: 001-code-reviewer.md  TEMPLATE.md
projects/01-code-reviewer/: Cargo.toml  Dockerfile  requirements.txt
projects/01-code-reviewer/src/: __init__.py  main.py  main.rs
projects/01-code-reviewer/tests/: __init__.py
projects/02-vector-engine/: Cargo.toml  Dockerfile  requirements.txt
projects/02-vector-engine/src/: __init__.py  main.py  main.rs
projects/03-rag-system/: Dockerfile  pyproject.toml  requirements.txt
projects/03-rag-system/src/: __init__.py  main.py
projects/04-multi-agent/: Dockerfile  pyproject.toml  requirements.txt
projects/04-multi-agent/src/: __init__.py  main.py
projects/05-recsys/: Dockerfile  pyproject.toml  requirements.txt
projects/05-recsys/src/: __init__.py  main.py
projects/06-llm-inference/: Cargo.toml  Dockerfile  requirements.txt
projects/06-llm-inference/src/: __init__.py  main.py  main.rs
projects/06-llm-inference/tests/: mod.rs
projects/07-finetuning/: pyproject.toml  requirements.txt
projects/07-finetuning/src/: __init__.py  main.py
projects/08-multimodal/: Dockerfile  pyproject.toml  requirements.txt
projects/08-multimodal/src/: __init__.py  main.py
projects/09-ai-platform/: Cargo.toml  Dockerfile  requirements.txt
projects/09-ai-platform/src/: __init__.py  main.py  main.rs
scripts/: benchmark.sh  ports.sh  setup.sh
shared/: __init__.py  config.py  pyproject.toml
shared/utils/: timing.py
todo/: day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md  day-15.md  day-16.md  day-17.md  day-18.md  day-19.md  day-20.md  day-21.md  day-22.md  day-23.md  day-24.md  day-25.md  day-26.md  day-27.md  day-28.md  day-29.md  day-30.md  day-31.md  day-32.md  day-33.md  day-34.md  day-35.md  day-36.md  day-37.md  day-38.md  day-39.md  day-40.md  (+21 more)
