[project]
name = "ai-expert-journey"
version = "0.1.0"
description = "AI Expert Journey workspace - Project-based learning roadmap for engineering-focused AI algorithm experts"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "shared",
    "projects/03-rag-system",
    "projects/04-multi-agent",
    "projects/05-recsys",
    "projects/07-finetuning",
    "projects/08-multimodal",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.6.0",
]
