[package]
name = "code-reviewer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "code-reviewer"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
thiserror = "1"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
