[package]
name = "vector-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "vector-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
thiserror = "1"
num-traits = "0.2"
half = "2.4"
memmap2 = "0.9"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
