[project]
name = "recsys"
version = "0.1.0"
description = "Real-Time Recommendation Engine - FastAPI service"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "lightgbm>=4.3.0",
    "torch>=2.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "redis>=5.0.0",
    "shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.uv.sources]
shared = { workspace = true }
