[package]
name = "llm-inference-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "llm-inference-tools"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
half = "2.4"
thiserror = "1"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
