[project]
name = "finetuning"
version = "0.1.0"
description = "Domain Model Fine-Tuning - SFT/RLHF training jobs"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.38.0",
    "datasets>=2.18.0",
    "peft>=0.9.0",
    "trl>=0.7.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.28.0",
    "torch>=2.2.0",
    "wandb>=0.16.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.uv.sources]
shared = { workspace = true }
