[project]
name = "multimodal"
version = "0.1.0"
description = "Multimodal Creative Generation - FastAPI service"
requires-python = ">=3.11"
dependencies = [
    "diffusers>=0.27.0",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "controlnet-aux>=0.0.7",
    "openai-clip>=1.0.1",
    "Pillow>=10.2.0",
    "replicate>=0.24.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "redis>=5.0.0",
    "shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.uv.sources]
shared = { workspace = true }
