[package]
name = "ai-platform-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "ai-platform-gateway"
path = "src/main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
hyper = "1"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
